force-app/main/default/objects/Coface_Report__c/Coface_Report__c.object-meta.xml
<CustomObject>
    <label>Coface Report</label>
    <nameField>
        <displayFormat>Coface-{YYYY}{MM}-{0000}</displayFormat>
        <label>Coface Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coface Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>