force-app/main/default/objects/Coface_Report__c/fields/Backend_Monit_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Backend_Monit_Order_Id__c</fullName>
    <label>Backend Monit Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>