force-app/main/default/objects/Coface_Report__c/fields/Call_Back_Url__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Url__c</fullName>
    <label>Call Back Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>