force-app/main/default/objects/Coface_Report__c/fields/Channel_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Channel_Delivery__c</fullName>
    <label>Channel Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>