force-app/main/default/objects/Coface_Report__c/fields/Coface_Company__c.field-meta.xml
<CustomField>
    <fullName>Coface_Company__c</fullName>
    <label>Coface Company</label>
    <referenceTo>Coface_Company__c</referenceTo>
    <relationshipLabel>Coface Reports</relationshipLabel>
    <relationshipName>Coface_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>