force-app/main/default/objects/Coface_Report__c/fields/Country_Special__c.field-meta.xml
<CustomField>
    <fullName>Country_Special__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country Special</label>
    <type>Checkbox</type>
</CustomField>