force-app/main/default/objects/Coface_Report__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>json</fullName>
            </value>
            <value>
                <fullName>pdf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>