force-app/main/default/objects/Coface_Report__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>监控订单结束日期</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>