force-app/main/default/objects/Coface_Report__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <label>Expected Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>