force-app/main/default/objects/Coface_Report__c/fields/Initial_Delivery_Id__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delivery_Id__c</fullName>
    <externalId>true</externalId>
    <label>Initial Delivery Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>