force-app/main/default/objects/Coface_Report__c/fields/Is_SF_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_SF_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SF Created</label>
    <type>Checkbox</type>
</CustomField>