force-app/main/default/objects/Coface_Report__c/fields/Monitorable__c.field-meta.xml
<CustomField>
    <fullName>Monitorable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitorable</label>
    <type>Checkbox</type>
</CustomField>