force-app/main/default/objects/Coface_Report__c/fields/Notification_Callback_Url__c.field-meta.xml
<CustomField>
    <fullName>Notification_Callback_Url__c</fullName>
    <label>Notification Callback Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>