force-app/main/default/objects/Coface_Report__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>订购时间</description>
    <label>Order Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>