force-app/main/default/objects/Coface_Report__c/fields/Order_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Report_Id__c</fullName>
    <description>订购成功后返回的订单Id</description>
    <externalId>true</externalId>
    <label>Order Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>