force-app/main/default/objects/Coface_Report__c/fields/Report_Request__c.field-meta.xml
<CustomField>
    <fullName>Report_Request__c</fullName>
    <label>Report Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>