force-app/main/default/objects/Coface_Report__c/fields/Report_Response__c.field-meta.xml
<CustomField>
    <fullName>Report_Response__c</fullName>
    <label>Report Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>