force-app/main/default/objects/Coface_Report__c/fields/Report_Slug__c.field-meta.xml
<CustomField>
    <fullName>Report_Slug__c</fullName>
    <label>Report Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>