force-app/main/default/objects/Coface_Report__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>监控订单开始日期</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>