force-app/main/default/objects/Coface_Report__c/fields/Url_Id__c.field-meta.xml
<CustomField>
    <fullName>Url_Id__c</fullName>
    <externalId>true</externalId>
    <label>Url Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>