force-app/main/default/objects/Coface_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Report_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Report_Id__c</columns>
    <columns>Initial_Delivery_Id__c</columns>
    <columns>Is_SF_Created__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>